syntax = "proto3";

import "types.proto";

package lt.pow.nukagit.proto;

service RepositoriesService {
  rpc ListRepositories (ListRepositoriesRequest) returns (ListRepositoriesResponse) {}
  rpc CreateRepository (CreateRepositoryRequest) returns (CreateRepositoryResponse) {}
}

message ListRepositoriesRequest {
}

message ListRepositoriesResponse {
  repeated Repository repositories = 1;
}

message CreateRepositoryRequest {
  string repository_name = 1;
}

message CreateRepositoryResponse {
}